<resources>
    <string name="app_name">FakeBook</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="comments">Comments</string>
    <string name="ip">10.100.102.68</string>
    <string name="port">80</string>
    <string-array name="menu">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
    </string-array>
    <string name="login_etUsername">Username</string>
    <string name="login_etPassword">Password</string>
    <string name="login_btnLogin">Login</string>
    <string name="Facebook">Facebook</string>
    <string name="Signup">Make a new account</string>
    <string name="SignUp_etUsername">Username</string>
    <string name="SignUp_etPassword">password</string>
    <string name="SignUp_etVerifyPassword">Verify Password</string>
    <string name="SignUp_etNickname">Nickname</string>
    <string name="SignUp_etSignup">Sign Up</string>
    <string name="feed_title">Welcome to the feed</string>
    <string name="login_error">Username or Password incorrect</string>
    <string name="post_content">Hello World\n</string>
    <string name="title_activity_feed">Feed</string>
    <string name="submit_button">submit</string>

    <string name="Fakebook">Fakebook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nickname">Nickname</string>
    <string name="upload_image_btn">Upload Image</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="hello_israel123">Hello Israel123</string>
    <string name="logout">LogOut</string>
    <string name="what_s_up_with_you_today">What\'s up with you today?</string>
    <string name="please_write_something">please write something</string>
    <string name="upload_image">Upload Image</string>
    <string name="submit">Submit</string>
    <string name="picture_taken">picture taken</string>
    <string name="cancel_upload">cancel upload</string>
    <string name="correct_pass_you_to_the_feed">Correct! pass you to the feed...</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_post">edit</string>
    <string name="textview">TextView</string>
    <string name="like_btn">Like</string>
    <string name="delete_btn">Delete</string>
    <string name="save_btn">Save</string>
    <string name="cancel_btn">Cancel</string>
    <string name="edit_btn">Edit</string>
    <string name="_please_write_something">please write something</string>
    <string name="new_comment">New comment...</string>
    <string name="new_comment1">New Comment</string>
    <string name="your_post_contains_bad_links">Your post contains bad links</string>
    <string name="your_post_contains_bad_link">Your post contains bad link</string>

</resources>