<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/commentTextView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:visibility="visible"/>

    <EditText
        android:layout_width="200dp"
        android:id="@+id/text_edit_comment"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textStyle="normal"
        android:background="@null" />

    <Button
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/edit"
        android:textSize="10sp"
        android:id="@+id/edit_comment_btn"
        android:backgroundTint="@color/blue"
        android:visibility="visible"/>

    <Button
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/delete"
        android:textSize="10sp"
        android:id="@+id/delete_comment_btn"
        android:backgroundTint="@color/red"
        android:visibility="visible"/>
    <Button
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/save"
        android:textSize="10sp"
        android:id="@+id/save_comment_btn"
        android:backgroundTint="@color/green"
        android:visibility="gone"/>

    <Button
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/cancel"
        android:textSize="10sp"
        android:id="@+id/cancel_comment_btn"
        android:backgroundTint="@color/red"
        android:visibility="gone"/>
</LinearLayout>
