<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <!-- Existing Login LinearLayout -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp">

        <!-- Username EditText -->
        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/SignUp_etUsername"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <!-- Password EditText -->
        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/SignUp_etPassword"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <!-- Verify Password EditText -->
        <EditText
            android:id="@+id/editTextVerifyPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/SignUp_etVerifyPassword"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <!-- TextView for password validation error -->
        <TextView
            android:id="@+id/textViewPasswordError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextVerifyPassword" />

        <!-- Nickname EditText -->
        <EditText
            android:id="@+id/editTe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/SignUp_etNickname"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <!-- Sign Up Button -->
    </LinearLayout>

    <!-- Profile Image Section -->
    <LinearLayout
        android:id="@+id/linearLayoutProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        tools:ignore="ExtraText">

        <!-- Profile Image ImageView -->
        <!-- Profile Image ImageView -->


        <!-- Upload Image Button -->
        <Button
            android:id="@+id/btnUploadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Upload Image" />

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/Signup"
            android:src="@drawable/ic_logo" />

        <Button
            android:id="@+id/btnSignupTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/SignUp_etSignup" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="71dp"
        android:padding="20dp"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="49dp">

        <!-- Facebook Logo ImageView -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Facebook"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.657" />

        <!-- Facebook TextView -->
    </LinearLayout>

    <!-- Existing Facebook LinearLayout -->
</androidx.constraintlayout.widget.ConstraintLayout>
